# MtEngine

./: .gitignore  CMakeLists.txt  README.md  meson.build
doc/: DEV.md  TODO.md  cmd.md  error.md  map.md  setup.md  struct.md
doc/graphic/: particles.md  skybox.md  terrain.md
doc/physic/: library.md
res/: setting.ini  state.cfg
res/maps/: demo_shape.cfg  lobby.cfg  map1.cfg  map2.cfg  test.cfg
res/maps/ely_peaks/: entities.txt  info.cfg
res/maps/lobby/: entities.txt  info.cfg
res/maps/map1/: info.cfg
res/maps/map2/: info.cfg
res/maps/map3/: info.cfg
res/maps/test/: info.cfg
res/shaders/: bsp.vs.glsl  bsp_quake.vs.glsl  debug.fs.glsl  emitter.fs.glsl  mdlColor.fs.glsl  mdlColor.vs.glsl  mdlSimple.fs.glsl  particles.vs.glsl  planeShape.fs.glsl  simple.fs.glsl  simple.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  terrain.cs.glsl  terrain.es.glsl  terrain.fs.glsl  terrain.vs.glsl  text.fs.glsl  text.vs.glsl
res/shaders/shader/: boxshape_fragment.glsl  boxshape_vertex.glsl  lineshape_geometry.glsl  model_static_vertex.glsl  modelv1_fragment.glsl  particles.vs.glsl  postprocess_fragment.glsl  skinning.fs.glsl  skinning.vs.glsl  skybox_vertex.glsl  sterrain_fragment.glsl  sterrain_vertex.glsl  tessterrain_vertex.glsl  valvemodel_fragment.glsl
res/shaders/shader2/: boxshape_fragment.glsl  boxshape_vertex.glsl  hud_vertex.glsl  lineshape_geometry.glsl  model_static_fragment.glsl  model_valve_fragment.glsl  particle_vertex.glsl  postprocess_fragment.glsl  tessterrain_vertex.glsl  text_fragment.glsl
res/system/: keybind.cfg  setting.cfg  state.cfg
shaders/: bsp.fs.glsl  bsp_quake.fs.glsl  bsp_source.fs.glsl  bsp_source.vs.glsl  debug.vs.glsl  emitter.gs.glsl  emitter.vs.glsl  mdlColor.fs.glsl  mdlColor.vs.glsl  mdlSimple.fs.glsl  mdlSimple.vs.glsl  monoColorModel.fs.glsl  monoColorModel.vs.glsl  particles.fs.glsl  particles.gs.glsl  planeShape.gs.glsl  planeShape.vs.glsl  skinning.fs.glsl  skinning.vs.glsl  terrain.cs.glsl  terrain.es.glsl  terrain.fs.glsl  terrain.vs.glsl  terrain_static.fs.glsl  terrain_static.vs.glsl  text.fs.glsl
shaders/shader/: grass_vertex.glsl  lineshape_fragment.glsl  lineshape_vertex.glsl  model_anim_vertex.glsl  model_static_fragment.glsl  modelv1_vertex.glsl  particles.fs.glsl  particles.gs.glsl  postprocess_vertex.glsl  shadows_fragment.glsl  simple.fs.glsl  simple.vs.glsl  terrain_fragment.glsl  terrain_tess_evaluation.glsl  tessterrain_tess_control.glsl  tessterrain_tess_evaluation.glsl  text_vertex.glsl  valvemodel_vertex.glsl  water_fragment.glsl  water_geometry.glsl  water_vertex.glsl
shaders/shader2/: flatground_vertex.glsl  hud_fragment.glsl  lineshape_fragment.glsl  lineshape_vertex.glsl  model_static_vertex.glsl  model_valve_vertex.glsl  particle_fragment.glsl  particle_geometry.glsl  postprocess_vertex.glsl  skybox_vertex.glsl  tessterrain_fragment.glsl  tessterrain_tess_control.glsl  tessterrain_tess_evaluation.glsl
shaders/shader2/200118_1010/: ground_fragment.glsl  ground_vertex.glsl  model_static_fragment.glsl  modelv0_fragment.glsl  modelv0_vertex.glsl  particle_vertex.glsl  postprocess_vertex.glsl  shadows_vertex.glsl  skybox_fragment.glsl  terrain_tess_control.glsl  tessterrain_geometry.glsl  valvemodel_vertex.glsl
src/: common.h  main.cpp
src/audio/: Audio.cpp  Audio.h
src/engine/: Config.cpp  Config.h  Input.cpp  Input.h  Log.cpp  Log.h  Random.cpp  Random.h  Timer.cpp  Timer.h  enumKey.h  library.cpp
src/engine/data/: HeightmapData.cpp  HeightmapData.h
src/engine/datatype/: Flag32.cpp  Flag32.h
src/engine/exception/: BoundingException.cpp  BoundingException.h  Exception.cpp  Exception.h  LoadException.cpp  LoadException.h  MathException.cpp  MathException.h
src/engine/file/: CFGFile.cpp  CFGFile.h  FileCFG.cpp  FileCFG.h  FileINI.cpp  FileINI.h  Image.cpp  Image.h
src/engine/load/: FileIni.cpp  FileIni.h  TextFile.cpp  TextFile.h
src/engine/math/: Math.cpp  Math.h
src/engine/object/: Node.cpp  Node.h
src/engine/random/: PerlinNoise.cpp  PerlinNoise.h
src/engine/utils/: DevUtils.cpp  DevUtils.h  FilePathUtils.cpp  FilePathUtils.h  GeneralUtils.cpp  GeneralUtils.h  StringUtils.cpp  StringUtils.h
src/example/ImGUI/: exam1.cpp  exam2.cpp
src/example/JoltPhysic/: exam1.cpp  exam2.cpp
src/example/ReactPhysic3D/: exam2.cpp
src/example/newtonDynamic/: exam1.cpp
src/example/openDynamicEngine/: helloWorld.cpp
src/game/: Command.cpp  Command.h  CommandMgr.cpp  CommandMgr.h  Dev.cpp  Dev.h  Game.cpp  Game.h  Screen.cpp  Screen.h
src/game/entities/: Entity.cpp  Entity.h  GroundEnt.cpp  GroundEnt.h  TestAnimEnt.cpp  TestAnimEnt.h  TestEmitterEnt.cpp  TestEmitterEnt.h  TestEnt.cpp  TestEnt.h  TestParticleEnt.cpp  TestParticleEnt.h
src/game/enviroments/: SkyEnv.cpp  SkyEnv.h  TerrainEnv.cpp  TerrainEnv.h  TerrainStaticEnv.cpp  TerrainStaticEnv.h
src/game/hud/: Hud.cpp  Hud.h  HudFpsCount.cpp  HudFpsCount.h  Screen.cpp  Screen.h
src/game/maps/: AreaBoundMap.cpp  AreaBoundMap.h  AreaMap.cpp  AreaMap.h  LobbyMap.cpp  LobbyMap.h  Map.cpp  Map.h  MapBuilder.cpp  MapBuilder.h  SimpleMap.cpp  SimpleMap.h  TestMap.cpp  TestMap.h
src/game/player/: Player.cpp  Player.h
src/game/ui/: PanelConsole.cpp  PanelConsole.h  PanelHelp.cpp  PanelHelp.h  PanelMenu.cpp  PanelMenu.h  PanelMonitor.cpp  PanelMonitor.h  PanelSetting.cpp  PanelSetting.h
src/graphic/: Camera.cpp  Camera.h  FrustumCulling.cpp  FrustumCulling.h  GUI.cpp  GUI.h  Graphic.cpp  Graphic.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramMgr.cpp  ShaderProgramMgr.h  glad.c  glad.cpp
src/graphic/bsp/: BspMap.cpp  BspMap.h  BspQuakeMap.cpp  BspQuakeMap.h  BspSourceMap.cpp  BspSourceMap.h
src/graphic/effect/: TODO
src/mod/: Plugin.cpp  Plugin.h  Plugin1.cpp  Plugin2.cpp  Plugin3.cpp  PluginBase.h  PluginSystem.cpp  PluginSystem.h
src/physic/: Physic.cpp  Physic.h  PhysicBuilder.cpp  PhysicBuilder.h
src/test/: Test.cpp  Test.h  TestExample.cpp  TestExample.h  TestFileCFG.cpp  TestFileCFG.h  TestMath.cpp  TestMath.h  TestQuaternion.cpp  TestQuaternion.h  TestString.cpp  TestString.h
(+160 files in other folders)
